fix: overflow scroll to desktop view

--- a/styles/cards.css
+++ b/styles/cards.css
@@ -122,6 +122,7 @@
   }
 
   .cards__description {
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
 }
